added responsive areas for freeform CSS

--- a/lib/css/gppro.freeform.css
+++ b/lib/css/gppro.freeform.css
@@ -1,5 +1,9 @@
-.gppro-freeform-input textarea.css-entry {
+.gppro-freeform-wrap textarea.css-entry {
 	font-size: 11px;
-	min-height: 300px;
-	margin: 0 0 10px;
+	min-height: 160px;
+	margin: 0 0 5px;
+}
+
+.gppro-freeform-wrap p.description {
+	margin: 0 0 5px;
 }
